--- a/htdocs/styles/less/variables.less
+++ b/htdocs/styles/less/variables.less
@@ -103,8 +103,8 @@
 @line-height-small:         1.5;
 
 @border-radius-base:        0px;
-@border-radius-large:       6px;
-@border-radius-small:       3px;
+@border-radius-large:       0px;
+@border-radius-small:       0px;
 
 //** Global color for active items (e.g., navs or dropdowns).
 @component-active-color:    #fff;
